Add exception handling for 400, 404 and basic classe
