# src/main/java/com/booleanuk/api/controller/GameController.java
@@ -1,0 +1,15 @@
+package com.booleanuk.api.controller;
+
+import com.booleanuk.api.repository.GameRepository;
+import com.booleanuk.api.repository.LibraryRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("games")
+public class GameController {
+
+    @Autowired
+    private GameRepository gameRepository;
+}
